--- a/readme
+++ b/readme
@@ -6,6 +6,8 @@ Projeto de comunicação BLE (Bluetooth Low Energy) usando ESP32, enviando zonas
 
 ## 📖 Sumário
 
+- [Autores](#Autores)
+- [Link Video](#Link-video)
 - [Objetivo](#objetivo)
 - [Tecnologias Utilizadas](#tecnologias-utilizadas)
 - [Pré-requisitos](#pré-requisitos)
@@ -13,13 +15,22 @@ Projeto de comunicação BLE (Bluetooth Low Energy) usando ESP32, enviando zonas
 - [Instruções de Instalação e Uso](#instruções-de-instalação-e-uso)
 - [Funcionamento do Código](#funcionamento-do-código)
 - [Resultados Parciais e Testes](#resultados-parciais-e-testes)
-- [Screenshots e Demonstrações](#screenshots-e-demonstrações)
-- [Referências e Links Úteis](#referências-e-links-úteis)
-- [Autor](#autor)
-- [Licença](#licença)
 
 ---
 
+## 👨‍💻 Autores
+
+- **Lu Vieira**
+- **Diego Furigo**
+- **Melissa Pereira**
+
+
+---
+
+## 📹 Link-video
+[Link do Vídeo](https://youtu.be/zPu_VqiZK8s)
+
+---
 ## 🎯 Objetivo
 
 Demonstrar o uso de Bluetooth Low Energy (BLE) no ESP32 para notificação de zonas simuladas, sorteando valores de zona a cada 2 segundos e notificando clientes conectados. Este projeto pode servir como base para rastreamento de ativos, localização indoor e experimentos com IoT BLE.
@@ -132,24 +143,9 @@ esp32-ble-zonas/
 
 ---
 
-## 👨‍💻 Autores
-
-- **Seu Nome**
-- Lu Vieira
-- Diego Furigo
-
----
 
 ## 📎 Link para o Repositório
 
-<https://github.com/SEU_USUARIO/esp32-ble-zonas>
+<https://github.com/luvieirasantos/iot.git>
 
 ---
-
-## 📝 Licença
-
-MIT License
-
----
-
-> **Dúvidas, sugestões ou contribuições?** Fique à vontade para abrir uma issue ou enviar um pull request!
